--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -326,21 +326,21 @@
 									<obsgroup groupingConceptId="1442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 										<tr>
 											<td>
-												<obs id="drug-${medId}" class="arv-med"
+												<obs id="drug" class="arv-med"
 													 conceptId="966AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 													 answerConceptIds="70056AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,71647AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,74807AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,75523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,75628AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,77995AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,78643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,79040AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,80487AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,80586AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,83412AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,84309AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,84795AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,86663AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 											</td>
 											<td>
-												<obs id="dose-${medId}" class="arv-med"
+												<obs id="dose-" class="arv-med"
 													 conceptId="1443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 											</td>
 											<td>
-												<obs id="dose-units-${medId}" class="arv-med"
+												<obs id="dose-units" class="arv-med"
 													 conceptId="1444AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 													 size="5"/>
 											</td>
 											<td>
-												<obs id="frequency-${medId}"
+												<obs id="frequency"
 													 class="arv-med"
 													 conceptId="160855AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 													 answerConceptIds="160862AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160863AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160864AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160865AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160858AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160866AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160870AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -348,11 +348,11 @@
 														/>
 											</td>
 											<td>
-												<obs id="duration-${medId}" class="arv-med"
+												<obs id="duration" class="arv-med"
 													 conceptId="159368AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 											</td>
 											<td>
-												<obs id="duration-units-${medId}"
+												<obs id="duration-units"
 													 class="arv-med"
 													 conceptId="1732AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 													 answerConceptIds="1822AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1072AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1073AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1074AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
