--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -34,6 +34,18 @@
 
 <script type="text/javascript">
 
+	jq(function () {
+		onLmpChange();
+		getField('lmp.value').change(onLmpChange);
+	});
+
+	beforeSubmit.push(function () {
+		if (validateRequiredFields() &amp;&amp; validateOtherFields()) {
+			return true;
+		}
+		return false;
+	});
+
 	function onLmpChange() {
 		var display = 'EDD could not be calculated!';
 		var lmpValue = getValue('lmp.value');
@@ -84,12 +96,7 @@
 				eddYear;
 	}
 
-	jq(function () {
-		onLmpChange();
-		getField('lmp.value').change(onLmpChange);
-	});
-
-	beforeSubmit.push(function () {
+	function validateRequiredFields() {
 		var gravida = getValue('gravida.value');
 		var parityTerm = getValue('parity-term.value');
 		var parityAbortion = getValue('parity-abortion.value');
@@ -99,7 +106,28 @@
 			return false;
 		}
 		return true;
-	});
+	}
+
+	function validateOtherFields() {
+		var urinePh = getValue('urine-ph.value');
+		var urineSpecificGravity = getValue('urine-specific-gravity.value');
+
+		if (urinePh != null) {
+			var urinePhValue = parseFloat(urinePh);
+			if (urinePhValue &lt; 5.0 || urinePhValue &gt; 9.0) {
+				getField('urine-ph.error').html('Urine pH must be between 5.0 and 9.0..').show();
+				return false;
+			}
+		}
+		if (urineSpecificGravity != null) {
+			var urineSpecificGravityValue = parseFloat(urineSpecificGravity);
+			if (urineSpecificGravityValue &lt; 1.0000 || urineSpecificGravityValue &gt; 1.1000) {
+				getField('urine-specific-gravity.error').html('Urine specific gravity must be between 1.000 and 1.1000..').show();
+				return false;
+			}
+		}
+		return true;
+	}
 
 </script>
 
@@ -120,108 +148,226 @@
 </div>
 
 <div class="ke-form-content">
-	<table align="center" border="0" class="tb" cellspacing="10">
-		<tr>
-			<td colspan="2">
-				<div class="ke-form-instructions">
-					<b>*</b>
-					indicates a required field
-				</div>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<legend>Maternal Profile</legend>
-				<table align="center" width="100%" class="tb1">
-					<tr>
-						<td width="250">ANC No:</td>
-						<td>
-							<obs conceptId="161655AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/>
-						</td>
-					</tr>
-					<tr>
-						<td>Gravida:</td>
-						<td>
-							<obs conceptId="5624AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true" id="gravida"/>
-						</td>
-					</tr>
-					<tr>
-						<td>Parity:</td>
-						<td>
-							<obs conceptId="160080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true" id="parity-term"/>
-							+
-							<obs conceptId="1823AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
-								 id="parity-abortion"/>
-						</td>
-					</tr>
-					<tr>
-						<td>L.M.P:</td>
-						<td>
-							<obs conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="lmp" required="true"/>
-						</td>
-						<td>
-							<obs conceptId="162095AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox"/>
-							Estimated
-						</td>
-					</tr>
-					<tr>
-						<td>EDD (Calculated from L.M.P):</td>
-						<td>
-							<span id="calculated-edd" class="value"></span>
-						</td>
-					</tr>
-					<tr>
-						<td>EDD (Ultrasound):</td>
-						<td>
-							<obs conceptId="5596AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"/>
-						</td>
-					</tr>
-				</table>
-			</td>
-			<td>
-				<legend>Antenatal Profile</legend>
-				<table align="center" width="100%" class="tb1">
-					<tr>
-						<td width="250">Blood Group/Rhesus:</td>
-						<td>
-							<obs conceptId="300AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</td>
-					</tr>
-					<tr>
-						<td>Serology:</td>
-						<td>
-							<obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</td>
-					</tr>
-					<tr>
-						<td>TB Screening:</td>
-						<td>
-							<obs conceptId="160108AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</td>
-					</tr>
-					<tr>
-						<td>HIV:</td>
-						<td>
-							<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</td>
-					</tr>
-					<tr>
-						<td>Urinalysis</td>
-						<td>
-							<obs conceptId="302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</td>
-					</tr>
-					<tr>
-						<td>BS for MPS:</td>
-						<td>
-							<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-	</table>
-	<enrollInProgram programId="b5d9e05f-f5ab-4612-98dd-adb75438ed34"/>
+<table align="center" border="0" class="tb" cellspacing="10">
+<tr>
+	<td colspan="2">
+		<div class="ke-form-instructions">
+			<b>*</b>
+			indicates a required field
+		</div>
+	</td>
+</tr>
+<tr>
+	<td>
+		<legend>Maternal Profile</legend>
+		<table align="center" width="100%" class="tb1">
+			<tr>
+				<td width="250">ANC No:</td>
+				<td>
+					<obs conceptId="161655AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/>
+				</td>
+			</tr>
+			<tr>
+				<td>Gravida:</td>
+				<td>
+					<obs conceptId="5624AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true" id="gravida"/>
+				</td>
+			</tr>
+			<tr>
+				<td>Parity:</td>
+				<td>
+					<obs conceptId="160080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true" id="parity-term"/>
+					+
+					<obs conceptId="1823AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
+						 id="parity-abortion"/>
+				</td>
+			</tr>
+			<tr>
+				<td>L.M.P:</td>
+				<td>
+					<obs conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="lmp" required="true"/>
+				</td>
+				<td>
+					<obs conceptId="162095AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="checkbox"/>
+					Estimated
+				</td>
+			</tr>
+			<tr>
+				<td>EDD (Calculated from L.M.P):</td>
+				<td>
+					<span id="calculated-edd" class="value"></span>
+				</td>
+			</tr>
+			<tr>
+				<td>EDD (Ultrasound):</td>
+				<td>
+					<obs conceptId="5596AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"/>
+				</td>
+			</tr>
+		</table>
+	</td>
+	<td>
+		<legend>Antenatal Profile</legend>
+		<table align="center" width="100%" class="tb1">
+			<tr>
+				<td width="250">Blood Group/Rhesus:</td>
+				<td>
+					<obs conceptId="300AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+			<tr>
+				<td>Serology:</td>
+				<td>
+					<obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+			<tr>
+				<td>TB Screening:</td>
+				<td>
+					<obs conceptId="160108AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+			<tr>
+				<td>HIV:</td>
+				<td>
+					<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+			<tr>
+				<td>BS for MPS:</td>
+				<td>
+					<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+			<tr>
+				<td>Urine</td>
+				<td>
+					<obs conceptId="302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+				</td>
+			</tr>
+		</table>
+	</td>
+</tr>
+<tr>
+	<td colspan="2">
+		<legend>Urinalysis</legend>
+		<table align="center" width="100%" class="tb1">
+			<tr>
+				<td>
+					<table>
+						<tr>
+							<td>Urine Microscopy</td>
+							<td>
+								<obs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="38"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urinary Albumin</td>
+							<td>
+								<obs conceptId="849AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Glucose Measurement (Quantitative)</td>
+							<td>
+								<obs conceptId="159733AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+								mg/dL
+							</td>
+						</tr>
+						<tr>
+							<td>Glucose Measurement (Qualitative)</td>
+							<td>
+								<obs conceptId="159734AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++),Four Plus(++++)"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urine pH</td>
+							<td>
+								<obs conceptId="161438AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-ph"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Specific Gravity</td>
+							<td>
+								<obs conceptId="161439AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="urine-specific-gravity"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Nitrite Test</td>
+							<td>
+								<obs conceptId="161440AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,Positive,One Plus(+),Two Plus(++)"/>
+							</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+					<table>
+						<tr>
+							<td>Urine Leukocyte Esterase Test</td>
+							<td>
+								<obs conceptId="161441AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urinary Ketone</td>
+							<td>
+								<obs conceptId="161442AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,Trace - 5,One Plus(+) - 15,Two Plus(++) - 50,Three Plus(+++) - 150"/>
+								mg/dL
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Bile Salt Test</td>
+							<td>
+								<obs conceptId="161444AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,Trace - 1,One Plus(+) - 4,Two Plus(++) - 8,Three Plus(+++) - 12"/>
+								mg/dL
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Bile Pigment Test</td>
+							<td>
+								<obs conceptId="161443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Color</td>
+							<td>
+								<obs conceptId="162106AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Turbidity</td>
+							<td>
+								<obs conceptId="162101AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+							</td>
+						</tr>
+						<tr>
+							<td>Urine Dipstick for Blood</td>
+							<td>
+								<obs conceptId="162096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++)"/>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+	</td>
+</tr>
+</table>
+<enrollInProgram programId="b5d9e05f-f5ab-4612-98dd-adb75438ed34"/>
 </div>
 
 <div class="ke-form-footer">
