--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -206,7 +206,7 @@
 			</tr>
 		</table>
 	</td>
-	<td>
+	<td valign="top">
 		<legend>Antenatal Profile</legend>
 		<table align="center" width="100%" class="tb1">
 			<tr>
@@ -239,12 +239,7 @@
 					<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 				</td>
 			</tr>
-			<tr>
-				<td>Urine</td>
-				<td>
-					<obs conceptId="302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-				</td>
-			</tr>
+
 		</table>
 	</td>
 </tr>
@@ -258,7 +253,7 @@
 						<tr>
 							<td>Urine Microscopy</td>
 							<td>
-								<obs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="38"/>
+								<obs conceptId="56AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="3" cols="38"/>
 							</td>
 						</tr>
 						<tr>
@@ -268,18 +263,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td>Glucose Measurement (Quantitative)</td>
-							<td>
-								<obs conceptId="159733AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-								mg/dL
-							</td>
-						</tr>
-						<tr>
 							<td>Glucose Measurement (Qualitative)</td>
 							<td>
 								<obs conceptId="159734AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,Trace,One Plus(+),Two Plus(++),Three Plus(+++),Four Plus(++++)"/>
+									 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1365AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Normal,Trace,One Plus(+),Two Plus(++),Three Plus(+++),Four Plus(++++)"/>
 							</td>
 						</tr>
 						<tr>
@@ -327,8 +315,8 @@
 							<td>Urine Bile Salt Test</td>
 							<td>
 								<obs conceptId="161444AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-									 answerLabels="Negative,Trace - 1,One Plus(+) - 4,Two Plus(++) - 8,Three Plus(+++) - 12"/>
+									 answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1874AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+									 answerLabels="Normal,Trace - 1,One Plus(+) - 4,Two Plus(++) - 8,Three Plus(+++) - 12"/>
 								mg/dL
 							</td>
 						</tr>
