--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -322,7 +322,7 @@
 					</table>
 				</td>
 				<td>
-				<td>
+				<td valign="top">
 					<legend>Pelvic Exam</legend>
 					<table align="center" width="100%" class="tb1">
 						<tr>
