Added 2 flags to the MCH program

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -230,7 +230,9 @@
 			<tr>
 				<td>HIV:</td>
 				<td>
-					<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+					<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
+							answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							answerLabels="HIV Positive,HIV Negative,Not Tested"/>
 				</td>
 			</tr>
 			<tr>
