--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -175,6 +175,51 @@
 
 				</tr>
 				<tr>
+					<td colspan="3" style="background-color: #696969; color: #ffffff;">LABORATORY INFORMATION</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<obsgroup groupingConceptId="162085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+							<table class="hei" width="100%">
+								<tbody>
+								<tr>
+									<th>Type of Test</th>
+									<th>Date of Sample <br />Collection</th>
+									<th>Test Contextual <br />Status</th>
+									<th>Results</th>
+									<th>DBS Sample Code</th>
+									<th>Date Results Collected</th>
+								</tr>
+								<tr>
+									<td>DNA PCR</td>
+									<td><obs conceptId="159951AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowTime="false" /></td>
+									<td><obs conceptId="162084AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="844AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="162086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="160082AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+								</tr>
+								<tr>
+									<td>First Antibody Test</td>
+									<td><obs conceptId="159951AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowTime="false" /></td>
+									<td><!--<obs conceptId="162084AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />--></td>
+									<td><obs conceptId="1040AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="162086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="160082AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+								</tr>
+								<tr>
+									<td>Final Antibody Test</td>
+									<td><obs conceptId="159951AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowTime="false" /></td>
+									<td><!--<obs conceptId="162084AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />--></td>
+									<td><obs conceptId="1326AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="162086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+									<td><obs conceptId="160082AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+								</tr>
+								</tbody>
+							</table>
+						</obsgroup>
+					</td>
+				</tr>
+				<tr>
 					<td colspan="3" style="background-color: #696969; color: #ffffff;text-align:center;">Early Eye Examination and Deworming </td>
 				</tr>
 				<tr>
