--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -32,10 +32,12 @@
 	<script type="text/javascript">
 
 			var birthdate = new Date("<lookup expression="patient.birthdate" />");
+			var patientId = <lookup expression="patient.patientId"/>;
 
 			var YES_CONCEPT_ID = 1065;
 			var NO_CONCEPT_ID = 1066;
 			var EXPOSURE_TO_HIV_ID = 822;
+			var SPECIAL_CARE = 161628;
 
 			function onTransferStatusChange() {
 				if (getValue('transfer-status.value') == NO_CONCEPT_ID) {
@@ -95,7 +97,7 @@
 				if (getValue('specialCare.value') == NO_CONCEPT_ID) {
 					jq('#reasonsForSpecialCare :input').prop('disabled', true);
 				}
-				else if (getValue('specialCare.value') == YES_CONCEPT_ID) {
+				else if (getValue('specialCare.value') == SPECIAL_CARE) {
 					jq('#reasonsForSpecialCare :input').prop('disabled', false);
 				}
 				else {
@@ -104,46 +106,21 @@
 			}
 			function hivExposed(){
 				if (getValue('hiv-exposed-child.value') == EXPOSURE_TO_HIV_ID) {
-					jq('#child-status-required').empty();
-					jq('#hei-id-error').hide();
-					jq('#hei-id-error').empty();
-					jq('#load-hei-id').dialog({
-						dialogClass: "no-close",
-						buttons: [
-									{
-										text: "Save", click: function()
-											{
-												var heiId = jq('#hei-id').val();
-												if (heiId == "") {
-													jq('#hei-id-error').html("Please provide a valid identifier, Empty NOT accepted");
-													jq('#hei-id-error').show();
-												}
-												else {
-													alert("TO DO: add functionality");
-												}
-											}
-									},
-									{ text: "Close", click: function() { $( this ).dialog( "close" ); } }
-								 ],
-						height: 200,
-						modal: true,
-						title: "HEI Unique Identifier Required",
-						width: 400
-					});
+					jq('#hei-id :input').prop('disabled', false);
 				}
 				else {
-					jq('#child-status-required').empty();
-					jq('#child-status-required').hide();
+					jq('#hei-id :input').prop('disabled', true);
 				}
 			}
 			function includeMothersNames(){
-				jq.getJSON('/' + OPENMRS_CONTEXT_PATH +  '/kenyaemr/patient/patientUtils/mothersNames.action', function(data) {
-					jq('#mother-name-list').html(data.value);
-				});
+				jq.getJSON('/' + OPENMRS_CONTEXT_PATH +  '/kenyaemr/patient/patientUtils/getMother.action',{ patientId: patientId },function(data) {
+						jq('#mother-name-list').html(data);
+
+					});
 			}
 		jq(function() {
 			//get cohort
-			getCohort()
+			getCohort();
 			jq('#child-status-required').hide();
 			//validate transfer in details
 			onTransferStatusChange()
@@ -154,10 +131,10 @@
 			jq('#pmtctDrugsReceived input').click(pmtctDrugsForMother);
 			onARTatEnrollment();
 			jq('#onART input').click(onARTatEnrollment);
-			//needSpecialCare();
+			needSpecialCare();
 			jq('#specialCare input').click(needSpecialCare);
-			//hivExposed();
-			//jq('#hiv-exposed-child input').click(hivExposed);
+			hivExposed();
+			jq('#hiv-exposed-child input').click(hivExposed);
 			//including the mother details
 			includeMothersNames();
 
@@ -167,10 +144,11 @@
 					jq('#child-status-required').html('Please specify the condition of the child');
 					return false;
 				}
-				<!--if (heiIdSaved == "" &amp;&amp; (getValue('hiv-exposed-child.value') == EXPOSURE_TO_HIV_ID)) {
-						hivExposed();
-		              	return false;
-				}-->
+				if (getValue('hiv-exposed-child.value') == EXPOSURE_TO_HIV_ID &amp;&amp; getValue('hei-id.value') == "") {
+					jq('#child-status-required').show();
+					jq('#child-status-required').html('HEI Unique Number Required');
+					return false;
+				}
 		        return true;
 			});
 		});
